# edge-app

./: .pre-commit-config.yaml  CMakeLists.txt  main.c  snd.c
